2014-9-4 Arthur Allignol <arthur.allignol@uni-ulm.de>

	* Tests: remove printing of one model; rerun test file

2013-9-19 Arthur Allignol <arthur.allignol@uni-ulm.de>

	* Update version number to 1.2.2
	* Tests: rerun the .save file
	* Cleaning of the namespace	

2011-2-5 Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>

	* new version number 1.2.1
	* cpfpo and pseudocpf: Bug fix
	* tests: rerun of the .save file

2010-29-11 Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>

	* New version number 1.2
	* NAMESPACE: Bug fix
	* pseudocpf: explicit call to geepack::geese

2010-02-11 Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>

	* cpf: Code modifications to handle the changes made to 
	the output of prodlim

	* pseudocpf: event not transformed to an ordered factor, just factor,

	* test file: new tests on pseuodcpf and cpfpo

2009-11-10 Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>

	* cpf: cpf returns a new item strata

	* plot.cpf, lines.cpf: mark.time is now FALSE by default.
	strata (cf. change in cpf) is used for legend labels when 
	none are provided.

	* [.cpf: Rewritten

2009-7-15 Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>

	* New lines and '[' methods for cpf objects

	* xyplot.cpfpo: Replaces plot.cpfpo

	* pseudocpf: New function to compute pseudo values. 
	New methods created (print and summary).