@@ -1,13 +1,13 @@
 Package: Cprob
 Title: Conditional probability function of a competing event
-Version: 1.2.3
+Version: 1.2.4
 Author: Arthur Allignol
 Description: Estimates the conditional probability function of a competing event, and fits, using the temporal process regression or the pseudo-value approach, a proportional-odds model to the conditional probability function
 Maintainer: Arthur Allignol <arthur.allignol@uni-ulm.de>
 Depends: prodlim
 Imports: tpr, geepack, lgtdl, lattice
 License: GPL (>= 2)
-Packaged: 2014-09-04 21:06:40 UTC; arthur
+Packaged: 2014-12-09 11:33:28 UTC; arthur
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-09-04 23:36:46
+Date/Publication: 2014-12-09 14:57:14
