@@ -1,5 +1,5 @@
 
-R version 3.1.1 (2014-07-10) -- "Sock it to Me"
+R version 3.1.2 (2014-10-31) -- "Pumpkin Helmet"
 Copyright (C) 2014 The R Foundation for Statistical Computing
 Platform: x86_64-suse-linux-gnu (64-bit)
 
@@ -20,6 +20,9 @@ Type 'q()' to quit R.
 > require(Cprob)
 Loading required package: Cprob
 Loading required package: prodlim
+> 
+> op <- options()
+> options(warn = 1)
 > 
 > ### test 1
 > data(mgus, package = "Cprob")
@@ -53,40 +56,6 @@ Call: cpf(formula = Hist(time, ev) ~ 1, data = mgus)
 172 0.5499048
 230        NA
 
-> 
-> aa[]
-Call: cpf(formula = Hist(time, ev) ~ 1, data = mgus)
-
-Number of observations:  241 
-
-    Cause n.event
-        1      59
-    other     130
- censored      52
-Warning message:
-In `[.cpf`(aa, ) : 'cpf' has only 1 conditional probability curve
-> 
-> all.equal(aa[]$cp, aa$cp)
-[1] TRUE
-Warning message:
-In `[.cpf`(aa, ) : 'cpf' has only 1 conditional probability curve
-> 
-> all.equal(aa[1]$cp, aa$cp)
-[1] TRUE
-Warning message:
-In `[.cpf`(aa, 1) : 'cpf' has only 1 conditional probability curve
-> 
-> aa[c(1, 2)]
-Call: cpf(formula = Hist(time, ev) ~ 1, data = mgus)
-
-Number of observations:  241 
-
-    Cause n.event
-        1      59
-    other     130
- censored      52
-Warning message:
-In `[.cpf`(aa, c(1, 2)) : 'cpf' has only 1 conditional probability curve
 > 
 > ### test 2
 > mgus$A <- ifelse(mgus$age < 64, 0, 1)
@@ -172,11 +141,9 @@ Two sample test:
 > 
 > fit1 <- pseudocpf(Hist(time, ev) ~ age + creat, mgus, id = id, timep = cutoffs,
 +                  corstr = "independence", scale.value = TRUE)
-There were 50 or more warnings (use warnings() to see the first 50)
 > 
 > fit2 <- pseudocpf(Hist(time, ev) ~ age + creat, mgus, id = id, timep = cutoffs,
 +                  corstr = "independence", scale.value = TRUE, jack = TRUE)
-There were 50 or more warnings (use warnings() to see the first 50)
 > 
 > fit1
 Call:
@@ -187,8 +154,6 @@ pseudocpf(formula = Hist(time, ev) ~ age + creat, data = mgus,
 age    0.03787388 1.0386002 0.01759928  2.1520132 0.03139632
 creat -0.11270506 0.8934141 0.15908985 -0.7084365 0.47867423
 
-Warning message:
-In sqrt(diag(x$fit$vbeta)) : NaNs produced
 > fit2
 Call:
 pseudocpf(formula = Hist(time, ev) ~ age + creat, data = mgus, 
@@ -199,8 +164,6 @@ pseudocpf(formula = Hist(time, ev) ~ age + creat, data = mgus,
 age    0.03787388 1.0386002 0.01682105  2.2515763 0.02434906
 creat -0.11270506 0.8934141 0.15803655 -0.7131582 0.47574787
 
-Warning message:
-In sqrt(diag(x$fit$vbeta)) : NaNs produced
 > 
 > summary(fit1)
 Call:
@@ -217,8 +180,6 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 age      1.0386     0.9628    1.0034     1.075
 creat    0.8934     1.1193    0.6541     1.220
 
-Warning message:
-In sqrt(diag(object$fit$vbeta)) : NaNs produced
 > summary(fit2)
 Call:
 pseudocpf(formula = Hist(time, ev) ~ age + creat, data = mgus, 
@@ -235,99 +196,26 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 age      1.0386     0.9628    1.0034     1.075
 creat    0.8934     1.1193    0.6541     1.220
 
-Warning message:
-In sqrt(diag(object$fit$vbeta)) : NaNs produced
->        
 > 
-> ### test 6: playing with cens.conde
+> 
+> ### test 6: playing with cens.code
 > mm <- mgus
 > mm$ev <- ifelse(mm$ev == 0, 4, mm$ev)
 > 
 > test1 <- pseudocpf(Hist(time, ev, cens.code = "4") ~ age + creat, mm, id = id, timep = cutoffs,
 +                    corstr = "independence", scale.value = TRUE)
-There were 50 or more warnings (use warnings() to see the first 50)
 > 
 > test2 <- cpfpo(Hist(time, ev, cens.code = "4") ~ age + creat, mm,
 +                tis=seq(10, 30, 0.3), w=rep(1,67))
 > 
-> test2$alpha == fit$alpha
-      (Intercept)  age creat
- [1,]        TRUE TRUE  TRUE
- [2,]        TRUE TRUE  TRUE
- [3,]        TRUE TRUE  TRUE
- [4,]        TRUE TRUE  TRUE
- [5,]        TRUE TRUE  TRUE
- [6,]        TRUE TRUE  TRUE
- [7,]        TRUE TRUE  TRUE
- [8,]        TRUE TRUE  TRUE
- [9,]        TRUE TRUE  TRUE
-[10,]        TRUE TRUE  TRUE
-[11,]        TRUE TRUE  TRUE
-[12,]        TRUE TRUE  TRUE
-[13,]        TRUE TRUE  TRUE
-[14,]        TRUE TRUE  TRUE
-[15,]        TRUE TRUE  TRUE
-[16,]        TRUE TRUE  TRUE
-[17,]        TRUE TRUE  TRUE
-[18,]        TRUE TRUE  TRUE
-[19,]        TRUE TRUE  TRUE
-[20,]        TRUE TRUE  TRUE
-[21,]        TRUE TRUE  TRUE
-[22,]        TRUE TRUE  TRUE
-[23,]        TRUE TRUE  TRUE
-[24,]        TRUE TRUE  TRUE
-[25,]        TRUE TRUE  TRUE
-[26,]        TRUE TRUE  TRUE
-[27,]        TRUE TRUE  TRUE
-[28,]        TRUE TRUE  TRUE
-[29,]        TRUE TRUE  TRUE
-[30,]        TRUE TRUE  TRUE
-[31,]        TRUE TRUE  TRUE
-[32,]        TRUE TRUE  TRUE
-[33,]        TRUE TRUE  TRUE
-[34,]        TRUE TRUE  TRUE
-[35,]        TRUE TRUE  TRUE
-[36,]        TRUE TRUE  TRUE
-[37,]        TRUE TRUE  TRUE
-[38,]        TRUE TRUE  TRUE
-[39,]        TRUE TRUE  TRUE
-[40,]        TRUE TRUE  TRUE
-[41,]        TRUE TRUE  TRUE
-[42,]        TRUE TRUE  TRUE
-[43,]        TRUE TRUE  TRUE
-[44,]        TRUE TRUE  TRUE
-[45,]        TRUE TRUE  TRUE
-[46,]        TRUE TRUE  TRUE
-[47,]        TRUE TRUE  TRUE
-[48,]        TRUE TRUE  TRUE
-[49,]        TRUE TRUE  TRUE
-[50,]        TRUE TRUE  TRUE
-[51,]        TRUE TRUE  TRUE
-[52,]        TRUE TRUE  TRUE
-[53,]        TRUE TRUE  TRUE
-[54,]        TRUE TRUE  TRUE
-[55,]        TRUE TRUE  TRUE
-[56,]        TRUE TRUE  TRUE
-[57,]        TRUE TRUE  TRUE
-[58,]        TRUE TRUE  TRUE
-[59,]        TRUE TRUE  TRUE
-[60,]        TRUE TRUE  TRUE
-[61,]        TRUE TRUE  TRUE
-[62,]        TRUE TRUE  TRUE
-[63,]        TRUE TRUE  TRUE
-[64,]        TRUE TRUE  TRUE
-[65,]        TRUE TRUE  TRUE
-[66,]        TRUE TRUE  TRUE
-[67,]        TRUE TRUE  TRUE
+> all(test2$alpha == fit$alpha)
+[1] TRUE
 > 
-> summary(test1)$coef == summary(fit1)$coef
-      coef exp(coef) se(coef)    w Pr(>|w|)
-age   TRUE      TRUE     TRUE TRUE     TRUE
-creat TRUE      TRUE     TRUE TRUE     TRUE
-Warning messages:
-1: In sqrt(diag(object$fit$vbeta)) : NaNs produced
-2: In sqrt(diag(object$fit$vbeta)) : NaNs produced
+> all(summary(test1)$coef == summary(fit1)$coef)
+[1] TRUE
+> 
+> options(op)
 > 
 > proc.time()
    user  system elapsed 
-  4.709   0.034   4.729 
+  5.758   0.042   5.788 
